# haystack

./: .gitignore  README.md  context.md  goal.md  gpu-verify.html  index.html  package.json  prompt-elite-dangerous-belt.md  prompt-froxel-volumetrics.md  prompt-saturn-belt.md  prompt-third-person-camera.md  prompt.md  tsconfig.json  vite.config.ts
beltsim/: .gitignore  README.md  pyproject.toml
beltsim/beltsim/: __init__.py  bake.py  cli.py  config.py  elements.py  plots.py  simulate.py  validate.py
beltsim/presets/: default.json  saturn-smoke.json  saturn.json  shepherd-moat.json  smoke.json
docs/: asteroid-sim-impl-log.md  eve-ui-functional-requirements.md  field-factory-design.md  flight-controls.md  gpu-asteroids-architecture.md  gpu-asteroids-impl-log.md  mobile-impl-log.md  owned-ship-jerk-fix-impl-log.md  ship-lights-collisions-impl-log.md
docs/client-render/: 2026-06-08-react-decouple-summary.md
docs/engine/: README.md  client-side-prediction.md  command-rpc.md  replication.md  runtime-topologies.md  world-and-actors.md
docs/research/: elite-dangerous-belt-reference.md
docs/ui/: definition-of-done.md  testids.md
ralph/: RALPH-CLIENT.md  RALPH.md  prd-client.json  prd.json  progress-client.txt  progress.txt  ralph-client.sh  ralph.sh
scripts/: dev-public.sh  mobile-shots.ts
scripts/bench/: belt-captures.mjs  client-render.ts  ed-belt-captures.mjs  ed-scale-captures.mjs  field-factory-stats.ts  froxel-captures.mjs  gpu-cross-bench.mjs  gpu-live-loop.mjs  gpu-verify-run.mjs  lights-visual.ts  load.ts  pack-bench.mjs  parity-factory.ts  (+12 more)
(+170 files in other folders)
