[project]
name = "beltsim"
version = "0.1.0"
description = "Haystack belt pipeline: N-body asteroid belt simulation + bake tooling (sim -> bake -> runtime artifacts)"
requires-python = ">=3.12"
dependencies = ["matplotlib>=3.10.9", "numpy>=2.4.6", "rebound>=5.0.0", "scipy>=1.17.1"]

[project.scripts]
beltsim = "beltsim.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beltsim"]
